[tool.poetry]
name = "scrapy-httpcache-parser"
version = "0.1.0"
description = ""
authors = ["ririumu <33805628+ririumu@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.11.2"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
